@@ -2,6 +2,7 @@ package camping.appbackend.config.security;
 
 import camping.appbackend.config.properties.AppProperties;
 import camping.appbackend.config.properties.CorsProperties;
+import camping.appbackend.domain.user.repository.UserRefreshTokenRepository;
 import camping.appbackend.oauth.domain.repository.OAuth2AuthorizationRequestBasedOnCookieRepository;
 import camping.appbackend.oauth.exception.RestAuthenticationEntryPoint;
 import camping.appbackend.oauth.filter.TokenAuthenticationFilter;
@@ -10,8 +11,7 @@ import camping.appbackend.oauth.handler.OAuth2AuthenticationSuccessHandler;
 import camping.appbackend.oauth.handler.TokenAccessDeniedHandler;
 import camping.appbackend.oauth.service.CustomOAuth2UserService;
 import camping.appbackend.oauth.token.AuthTokenProvider;
-import camping.appbackend.user.domain.repository.UserRefreshTokenRepository;
-import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -22,7 +22,6 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsUtils;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
@@ -51,28 +50,23 @@ public class SecurityConfig {
                 .accessDeniedHandler(tokenAccessDeniedHandler)
                 .and()
                 .authorizeRequests()
-                .requestMatchers(CorsUtils::isPreFlightRequest).permitAll()
                 .antMatchers("/**").permitAll() // 일단 임시로 다 열어둠..
-                .antMatchers("/login").permitAll()
                 .antMatchers("/swagger-resources/**").permitAll()
                 .anyRequest().authenticated();
 
         // oauth2
         http
                 .oauth2Login()
-                .authorizationEndpoint()
-                .baseUri("/oauth2/authorization")
+                .authorizationEndpoint().baseUri("/oauth2/authorization")
                 .authorizationRequestRepository(oAuth2AuthorizationRequestbasedOnCookieRepository())
                 .and()
-                .redirectionEndpoint()//endpoint로 인증요청을 받으면, Spring security의 Oauth2 사용자를 provider가 제공하는 AuthorizationUri로 Redirect
-                .baseUri("/*/oauth2/code/*") // 이 때, 사용자 인증코드 (authorization code)를 함께 갖고감
+                .redirectionEndpoint().baseUri("/*/oauth2/code/*")
                 .and()
                 .userInfoEndpoint() //Oauth2 로그인 성공 이후 사용자 정보를 가져올때의 설정 담당
                 .userService(oAuth2UserService) // 소셜 로그인 성공 시 후속조치를 진행할 UserService인터페이스의 구현체 등록
                 .and()
-                .successHandler(
-                        oAuth2AuthenticationSuccessHandler()) // JWT authentication token을 만들고, client가 정의한 redirect로 token을 갖고 넘어감
-                .failureHandler(oAuth2AuthenticationFailureHandler()); // 인증이 실패하면 error코드를 담은 uri를 넘겨줌
+                .successHandler(oAuth2AuthenticationSuccessHandler())
+                .failureHandler(oAuth2AuthenticationFailureHandler());
 
         http.addFilterBefore(tokenAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
@@ -113,17 +107,17 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    //Cors 설정
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         UrlBasedCorsConfigurationSource corsConfigSource = new UrlBasedCorsConfigurationSource();
 
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedHeaders(Arrays.asList(corsProperties.getAllowedHeaders().split(",")));
-        corsConfig.setAllowedMethods(Arrays.asList(corsProperties.getAllowedMethods().split(",")));
-        corsConfig.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins().split(",")));
+        corsConfig.setAllowedHeaders(List.of("*"));
+        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        corsConfig.setAllowedOrigins(List.of("http://localhost:3000"));
+        corsConfig.setExposedHeaders(List.of("*"));
         corsConfig.setAllowCredentials(true);
-        corsConfig.setMaxAge(corsConfig.getMaxAge());
+        corsConfig.setMaxAge(3600L);
 
         corsConfigSource.registerCorsConfiguration("/**", corsConfig);
         return corsConfigSource;
